Fix bug where code block causes scrolling issues on mobile

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -643,7 +643,7 @@ figure .fig-desktop {
   left: -1rem;
 }
 
-.code-block pre {
+.code-block, pre {
   overflow-y: hidden;
   overflow-x: auto;
   margin: 8px 0;
